# linkedin_scraper_webapp

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md
client/src/: index.css
client/src/components/: lead-filters.tsx  lead-modal.tsx  lead-stats.tsx  lead-table.tsx
client/src/pages/: dashboard.tsx
data/: leads.db
python_app/: README.md  api.py  app.py  database.py  models.py  run_app.sh  start_api.py  start_app.py
server/: routes.ts  storage.ts
shared/: schema.ts
